[tool.poetry]
name = "sienna"
version = "0.2.5"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.9.13"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.2.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
